--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,16 @@
 venv/
 *.pyc
 
+data/
+
 # Haskell
 
 *.o
 .stack_work/
 *.yaml
 
-
+# Elm
+# elm-package generated files
+elm-stuff
+# elm-repl generated files
+repl-temp-*
